--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: large;
+  background-color: blueviolet;
+}
+
+header{
   text-align: center;
+  padding: 20px;
+}
+header .border{
+  border: 2px solid black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.papa{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  margin: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.container{
+  background-color: rgb(243 ,244,246);
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+.input{
+  padding: 20px;
+  margin: 10px;
+}
+input{
+  width: 80%;
+  padding: 20px;
+  border: 1px solid aliceblue;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grids{
+  display: grid;
+  grid-template-columns: repeat(3,2fr);
+}
+.grey{
+  background-color: rgb(214, 210, 210);
+  border: 0px solid white;
+  padding: 10px;
+  margin: 10px;
+}
+button{
+  cursor: pointer;
+}
+
+.yellow{
+  background-color: rgb(250,204,21);
+  border: 0px solid white;
+  padding: 10px;
+  margin: 10px;
+}
+
+h1{
+  padding: 10px;
+  margin: 10px;
+}
+
+.clear{
+  background-color: rgb(248,113,113);
+  border: 0 solid white;
+  padding: 10px;
+  margin: 10px;
 }
